--- a/style.css
+++ b/style.css
@@ -8,12 +8,12 @@ body {
 
 #header {
     display: flex;
-    justify-content: space-around;
+    justify-content: space-between;
     align-items: center;
     background-color: #1f2937;
     margin: 0;
-    padding: 20px 0;
-    gap: 300px;
+    padding: 20px 100px;
+    flex-wrap: wrap;
 }
 
 .header-logo {
@@ -54,6 +54,7 @@ body {
     align-items: center;
     gap: 50px;
     padding: 100px;
+    flex-wrap: wrap;
 }
 
 .hero {
@@ -75,7 +76,7 @@ body {
     background-color: #3882f6;
     border: 0;
     border-radius: 5px;
-    padding: 8px 25px;
+    padding: 5px 25px;
     flex-shrink: 0;
 }
 
@@ -101,6 +102,7 @@ body {
     justify-content: center;
     align-items: center;
     gap: 70px;
+    flex-wrap: wrap;
 }
 
 .info-with-image {
@@ -149,8 +151,37 @@ body {
 
 #section4 {
     background-color :#f9faf8;
+    padding: 100px 150px;
+    display: flex;
+    justify-content: center;
+}
+
+#coa-container {
+    background-color: #3882f6;
+    border-radius: 10px;
+    padding: 50px 100px;
+    display:flex;
+    justify-content: space-around;
+    gap: 100px;
+    align-items: center;
+}
+
+#coa-main-text {
+    font-weight: bold;
+    font-size: 18px;
+}
+
+#coa-subtext{
+}
+
+#coa-button {
+    border: 2px solid #f9faf8;
 }
 
 #footer {
-
+    background-color: #1f2937;
+    padding: 30px 0;
+    display:flex;
+    justify-content: center;
+    align-items: center;
 }
