--- a/style.css
+++ b/style.css
@@ -80,6 +80,9 @@ body {
     flex-shrink: 0;
 }
 
+#main-img {
+    max-width: 600px;
+}
 
 #section2 {
     background-color :#f9faf8;
@@ -111,11 +114,13 @@ body {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    gap: 10px;
 }
 
 .info-image {
     border: 3px solid #3882f6;
     border-radius: 20px;
+    max-width: 150px;
 }
 
 .img-subtext {
